# yyaml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_test.c  go.mod  pyproject.toml  test_simple.c  version.py  yyaml.go
.github/workflows/: cmake.yml  docs.yml  go.yml
benchmarks/data/: init.sh
benchmarks/go/: Makefile  benchmark.go  go.mod  go.sum  utils.go
benchmarks/python/: benchmark.csv  benchmark.py  benchmark_visualize.py  requirements.txt
bindings/go/: clib.go  go.mod  test_example.go  yyaml.go
bindings/go/examples/: README.md  sample01_basic.go  sample02_advanced.go  sample03_file_operations.go  sample04_json_to_yaml.go  sample05_yaml_to_json.go
bindings/python/: yyaml_python.pyx
cmake/: DynamicVersion.cmake  Optimize.cmake  Startup.cmake
docs/: .docsignore  Makefile  README.md  docusaurus.config.js  index.mdx  package-lock.json  package.json  sidebars.js
docs/benchmarks/: index.mdx
docs/languages/: index.md
docs/languages/c/: Doxyfile  doxybook.json  index.md
docs/languages/cpp/: Doxyfile  doxybook.json  index.md
docs/src/components/HomepageFeatures/: index.js  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
examples/: README.md  example_usage.py  setup.py
examples/c/: CMakeLists.txt  c_sample01_read_app_config.c  c_sample02_parse_inventery.c  c_sample03_roundtrip_temp.c  c_sample04_dump_json.c  common.c  common.h  sample01_dump.c  sample02_query.c  sample03_roundtrip_temp.c
examples/cpp/: CMakeLists.txt  cpp_sample01_roundtrip_complex.cpp  cpp_sample02_inspect_config.cpp  cpp_sample03_dumps_as_json.cpp  cpp_sample04_build_document.cpp  dumps_as_json.cpp  inspect_config.cpp  roundtrip_complex.cpp
examples/data/: app_config.yaml  inventory.yml
examples/go/: README.md  sample01_basic.go  sample02_advanced.go  sample03_file_operations.go  sample04_json_to_yaml.go  sample05_yaml_to_json.go
includes/: yyaml.h  yyaml.hpp
src/: yyaml.c  yyaml.pyx
src/python/: yyaml.pyx  yyaml_python.pyx
src/python/yyaml/: __init__.py
src/yyaml/: __init__.py
tests/: CMakeLists.txt  debug_yaml.c  test_python_api.py  test_yaml_files.c  test_yyaml.c
tests/bundled/: CMakeLists.txt
tests/c/: CMakeLists.txt  test_main.c  test_yaml_files.c  test_yyaml.c
tests/cpp/: CMakeLists.txt  test_document.cpp  test_main.cpp
tests/data/: mappings.yaml  sequences.yaml  simple_scalars.yaml  special_cases.yaml
tests/go/: go.mod  test_yyaml.go  yyaml_test.go
tests/python/: test_yaml_parity.py
yyaml/: yyaml.c  yyaml.h
