[build-system]
requires = ["scikit-build-core<0.11.6", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "yyaml"
version = "0.5.0"
description = ""
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["xml", "pugixml", "cython", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["scikit-build-core<0.11.6", "cython", "pytest-xdist"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/mohammadraziei/yyaml"
"Bug Tracker" = "https://github.com/mohammadraziei/yyaml/issues"
"Document" = "https://mohammadraziei.github.io/yyaml"


[tool.scikit-build]
# build-dir = "build"
build.verbose = true


[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"


# [tool.scikit-build.build]
# targets = ["yyaml"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]